--- a/src/components/topbar/Topbar.css
+++ b/src/components/topbar/Topbar.css
@@ -77,4 +77,9 @@
     border: none;
     background-color: #fff;
     color: rgb(88, 88, 88);
+    cursor: pointer;
+}
+.profileDrawer{
+    top: 50px;
+    height: calc(100% - 50px);
 }
