--- a/src/components/widgetSm/widgetSm.css
+++ b/src/components/widgetSm/widgetSm.css
@@ -1,64 +1,69 @@
-.widgetSm{
-    flex: 1;
-    padding: 20px;
-    margin-right: 20px;
-    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+.widgetSm {
+  flex: 1;
+  padding: 20px;
+  margin-right: 20px;
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
 }
 
-.widgetSmTitle{
-    font-size: 22px;
-    font-weight: 600;
+.widgetSmTitle {
+  font-size: 22px;
+  font-weight: 600;
 }
 
-.widgetSmList{
-    margin: 0;
-    padding: 0;
-    list-style: none;
+.widgetSmList {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-.widgetSmListItem{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 20px 0;
+.widgetSmListItem {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 0;
 }
 
-.widgetSmImg{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
+.widgetSmImg {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
-.widgetSmUser{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
+.widgetSmUser {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.widgetSmUserName{
-    font-weight: 600;
+.widgetSmUserName {
+  font-weight: 600;
 }
 
-.widgetSmUserTitle{
-    font-weight: 200;
-    font-size: 15px;
-    padding-top: 5px;
+.widgetSmUserTitle {
+  font-weight: 200;
+  font-size: 15px;
+  padding-top: 5px;
 }
 
-.widgetSmButton{
-    display: flex;
-    align-items: center;
-    border: none;
-    border-radius: 10px;
-    padding: 7px 10px;
-    background-color: #eeeef7;
-    color: #555;
-    cursor: pointer;
+.widgetSmButton {
+  display: flex;
+  align-items: center;
+  border: none;
+  border-radius: 10px;
+  padding: 7px 10px;
+  background-color: #eeeef7;
+  color: #555;
+  cursor: pointer;
 }
 
-.widgetSmIcon{
-    font-size: 16px !important;
-   
+.widgetSmIcon {
+  font-size: 16px !important;
+}
+
+@media screen and (max-width: 1024px) {
+  .widgetSm {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
 }
