--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -44,7 +44,22 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .sidebar{
-    display: none;
-}
+  .sidebar {
+    opacity: 0;
+
+    position: absolute;
+    height: 100%;
+    top: 0;
+    font-size: 0.8rem;
+    transition: all 0.3s ease-in;
+  }
+  .showMobileMenu {
+    display: flex;
+    opacity: 1;
+    position: fixed;
+    left: 0;
+    margin-top: 10px;
+    padding-bottom: 10px;
+    transition: all 0.3s ease-in;
+  }
 }
